@@ -177,12 +177,12 @@ binary-install/$(DEBIAN_NAME)::
 	dh_link $(DEBIAN_FF3_DIR)/icons/mozicon128.png usr/share/pixmaps/$(DEBIAN_NAME).png
 	dh_link usr/share/myspell/dicts $(DEBIAN_FF3_DIR)/dictionaries
 
-binary-install/firefox-3.0::
+binary-install/$(DEBIAN_NAME)::
 	cat debian/ubuntu-useragent.js.tmpl | sed \
 		-e 's/@VENDOR@/'`lsb_release -i -s`'/g' \
 		-e 's/@VENDOR_SUB@/'`lsb_release -r -s`'/g' \
 		-e 's/@VENDOR_COMMENT@/'`lsb_release -c -s`'/g' \
-	> debian/firefox-3.0/$(DEBIAN_FF3_DIR)/defaults/preferences/ubuntu-useragent.js
+	> debian/$(DEBIAN_NAME)/$(DEBIAN_FF3_DIR)/defaults/preferences/ubuntu-useragent.js
 
 LOCALE_VERSION = $(shell echo $(DEBIAN_VERSION) | sed -e 's/~cvs.*/pre/' | tr -d '~')
 
@@ -197,9 +197,9 @@ ifeq (,$(findstring $(EM_TRANSLATION_VERSION), $(LOCALE_VERSION)))
 	$(error EM_TRANSLATION_VERSION=$(EM_TRANSLATION_VERSION) LOCALE_VERSION=$(LOCALE_VERSION). You need to explicitly adjust the translation version and min/max bounds.)
 endif
 
-binary-post-install/firefox-3.0::
-	sed -i -e 's/^MaxVersion=.*/MaxVersion=1.9.0.*/' debian/firefox-3.0/$(DEBIAN_FF3_DIR)/application.ini
-	sed -i -e 's/^MinVersion=.*/MinVersion=1.9.0.1/' debian/firefox-3.0/$(DEBIAN_FF3_DIR)/application.ini
+binary-post-install/$(DEBIAN_NAME)::
+	sed -i -e 's/^MaxVersion=.*/MaxVersion=1.9.0.*/' debian/$(DEBIAN_NAME)/$(DEBIAN_FF3_DIR)/application.ini
+	sed -i -e 's/^MinVersion=.*/MinVersion=1.9.0.1/' debian/$(DEBIAN_NAME)/$(DEBIAN_FF3_DIR)/application.ini
 
 pre-build:: $(subst_files) debian/migrator/ffox-3-beta-profile-migration-dialog
 	set -e; for i in $(UUDECODE); do \
