@@ -1,10 +1,15 @@
 firefox-3.0 (3.0.1+build1+nobinonly-0ubuntu2) UNRELEASED; urgency=low
 
+  [ Alexander Sack ]
   * Fix: #246775 - "wrong user-agent string in hardy build" by adding proper
     build-depends
     - update debian/control
 
- -- Alexander Sack <asac@ubuntu.com>  Fri, 25 Jul 2008 22:05:49 +0200
+  [ Fabien Tassin ]
+  * Drop more firefox-3.0 references to ease merge with the 3.1 branch
+    - update debian/rules
+
+ -- Fabien Tassin <fta@sofaraway.org>  Tue, 05 Aug 2008 01:33:07 +0200
 
 firefox-3.0 (3.0.1+build1+nobinonly-0ubuntu1) intrepid; urgency=low
 
